--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
           <div class="btns">
               <button type="text" class="btnSubmit">SUBMIT</button>
-              <button type="reset" class="btnCanCel">CANCEL</button>
+              <button type="reset" class="btnCancel">CANCEL</button>
           </div>
         </form>
       </div>
@@ -48,8 +48,8 @@
         <p class="age"></p>
         <p class="isMarried"></p>
       </div>
-      
-      <p class="messege">Helloo ey guys</p>
+
+      <p class="message"></p>
     </div>
     <script src="./js/app.js"></script>
   </body>
