--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           />
 
           <div class="btns">
-              <button type="text" class="btnSubmit">SUBMIT</button>
+              <button type="button" class="btnSubmit">SUBMIT</button>
               <button type="reset" class="btnCancel">CANCEL</button>
           </div>
         </form>
